--- a/src/renderer/frontend/containers/Outliner/SearchPanel/search.scss
+++ b/src/renderer/frontend/containers/Outliner/SearchPanel/search.scss
@@ -19,7 +19,7 @@
       width: 150px !important;
     }
     > *:nth-child(3) {
-      max-width: 325px !important;
+      max-width: 300px !important;
       border-right: none !important;
     }
 
